Archive2/5a/673800c6945267/output
main.cpp:12:18: error: 'L' was not declared in this scope
 const char* s2 = L "\Hello\nWorld\n";
                  ^
